# dock

./: .clang-format  .gitignore  AGENT.md  CMakeLists.txt  README.md  SKILL.md  quide.md
agents/: openai.yaml
assets/: generate_names.sh
assets/data/: asmaul_husna.json
assets/lang/: ar.json  en.json
assets/macos/: DuckHunterStarter.icns
assets/macos/DuckHunterStarter.iconset/: DuckHunterStarter.icns
assets/shaders/frag/: environment_cloud.frag  environment_instanced.frag  environment_tree.frag.spv  god_rays.frag  god_rays.frag.spv  sprite.frag  sprite.frag.spv  sun_disk.frag  sun_disk.frag.spv
assets/shaders/vert/: environment_cloud.vert  environment_instanced.vert.spv  environment_tree.vert  environment_tree.vert.spv  fullscreen_triangle.vert  fullscreen_triangle.vert.spv  sprite.vert  sprite.vert.spv
build-release/: CMakeCache.txt  DuckHunterStarter-Info.plist  Makefile  cmake_install.cmake  install_manifest.txt
build-release/Duck.app/Contents/: Info.plist
build-release/Duck.app/Contents/MacOS/: Duck
build-release/Duck.app/Contents/Resources/assets/shaders/frag/: environment_cloud.frag.spv  environment_instanced.frag.spv  environment_tree.frag  god_rays.frag  god_rays.frag.spv  sun_disk.frag  sun_disk.frag.spv
build-release/Duck.app/Contents/Resources/assets/shaders/vert/: environment_cloud.vert.spv  environment_instanced.vert  fullscreen_triangle.vert.spv  sprite.vert
examples/text/: README.md  TextSystemQuickStart.cpp  VulkanHudIntegrationExample.cpp
macos/: DeployBundle.cmake.in  Info.plist.in  MoltenVK_icd.json.in
references/: duckh-map.md
scripts/: build-dmg.sh
src/: main.cpp
src/assets/: DuckSpriteAtlas.cpp  DuckSpriteAtlas.h  HunterSpriteAtlas.cpp  HunterSpriteAtlas.h  HunterSpriteData.cpp  HunterSpriteData.h  NatureSystem.cpp  NatureSystem.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteAtlas.h
src/audio/: SoundEffectPlayer.cpp  SoundEffectPlayer.h  miniaudio_impl.cpp
src/core/: App.cpp  App.h  AppGameplay.cpp  AppRender.cpp  AsmaulHusnaOverlay.cpp  AsmaulHusnaOverlay.h  DockIcon.h  DockIcon.mm  DuckGameplay.cpp  DuckGameplay.h  DuckPool.cpp  DuckPool.h  HunterController.cpp  HunterController.h  HunterGameplay.cpp  HunterGameplay.h  Input.cpp  Input.h  RewardSystem.cpp  RewardSystem.h  SceneLayout.cpp  SceneLayout.h  SkillAssessment.cpp  SkillAssessment.h  StageDefinitions.h  StageObjectives.h  Timer.cpp  Timer.h  WaveManager.cpp  WaveManager.h  Window.cpp  Window.h
src/game/: DuckSpriteAtlas.cpp  DuckSpriteAtlas.h  HunterSpriteAtlas.cpp  HunterSpriteAtlas.h  HunterSpriteData.cpp  HunterSpriteData.h  NatureSystem.cpp  NatureSystem.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteAtlas.h
src/gameplay/: DuckGameplay.cpp  DuckGameplay.h  GameplayManager.cpp  HunterController.cpp  HunterController.h  RewardSystem.cpp  RewardSystem.h  SkillAssessment.cpp  SkillAssessment.h  WaveManager.cpp  WaveManager.h
src/gfx/: AtmosphereRenderer.cpp  AtmosphereRenderer.h  EnvironmentAtlas.cpp  EnvironmentAtlas.h  EnvironmentTypes.h  RenderTypes.h  VulkanContext.cpp  VulkanContext.h
src/rendering/: RenderManager.cpp  SceneLayout.cpp  SceneLayout.h
src/text/: ArabicJoiner.cpp  ArabicJoiner.h  BasicArabicShaper.cpp  BasicArabicShaper.h  BasicBidiResolver.cpp  BasicBidiResolver.h  InternalGlyphProvider.cpp  InternalGlyphProvider.h  README.md  TextLayouter.cpp  TextLayouter.h  TextRendererBridge.cpp  TextRendererBridge.h  TextRendererTypes.h  TextSystem.cpp  TextSystem.h  TextTypes.h  Utf8.cpp  Utf8.h
src/ui/: Localization.cpp  Localization.h  TextAtlas.cpp  TextAtlas.h
tools/: generate_grass_softwind_sheet.py
